Thu Oct 3 10:49:11 2013 EDT 2013 (dar)
------------------------------------
 * bb #1570: Support ADC compression in DMG

Wed Oct 2 11:22:40 2013 EDT 2013 (dar)
------------------------------------
 * bb #9053: ClamAV 0.98 can't be compiled on FreeBSD 7

Mon Sep 30 11:04:58 2013 EDT 2013 (dar)
------------------------------------
 * bb #9017: tomsfastmath warning with zLinux on s390x

Fri Sep 15 18:15:36 2013 EDT 2013 (morgan)
------------------------------------
 * win32: Import libxml2 2.9.1 components into windows builds for xmlReader support.

Fri Sep 13 12:22:58 2013 EDT 2013 (morgan)
------------------------------------
 * libclamav: Add support for scanning xar/pkg archive files.

Tue Sep 3 18:37:13 2013 EDT 2013 (dar)
------------------------------------
 * V 0.98.0 RC

Thu Aug 15 17:44:49 2013 EDT 2013 (dar)
------------------------------------
 * code quality fixes on libclamav, clamd, sigtool, clamav-milter, clamconf and clamdtop

Fri Aug 9 18:33:06 2013 EDT 2013 (dar)
------------------------------------
 * code quality fixes on libclamav, libclamunrar and freshclam

Wed Aug 7 18:55:13 EDT 2013 (dar)
------------------------------------
 * valgrind suppression rules for dl_catch_error complaints

Tue Jul 30 15:07:25 EDT 2013 (dar)
------------------------------------
 * bb #8385: PDF ASCII85Decode zero-length fix

Thu Jun 20 13:43:46 EDT 2013 (dar)
------------------------------------
 * libclamav: SCAN_ALL mode fixes

Thu May 9 12:50:46 EDT 2013 (dar)
------------------------------------
 * bb #7436: elf64 header early exit

Mon Apr 22 11:06:37 EDT 2013 (dar)
------------------------------------
 * iso9660: iso_scan_file rewrite

Wed Apr 17 11:20:48 EDT 2013 (olney)
------------------------------------
 * V 0.97.8

Mon Apr 15 17:58:26 EDT 2013 (dar)
------------------------------------
 * cache: cacheset_remove fix and better logging

Fri Apr 12 14:20:23 EDT 2013 (swebb)
------------------------------------
 * libclamav: Fix bugs in mpool and readdb
